<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/taxi_list_item_layout"
    android:background="@color/white_v100"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/tax_id_layout"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/taxi_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxi_id"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/taxi_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/taxi_id_text"
            android:layout_marginStart="75dp"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/taxi_fleet_layout"
        android:layout_width="wrap_content"
        android:layout_below="@id/tax_id_layout"
        android:layout_height="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/taxi_fleet_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fleet_type"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/taxi_fleet_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/taxi_fleet_type_text"
            android:layout_marginStart="50dp"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/coordinates_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinates"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_below="@id/taxi_fleet_layout"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/coordinates_text"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/coordinates_text"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/heading_layout"
        android:layout_width="wrap_content"
        android:layout_below="@id/longitude"
        android:layout_height="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_toEndOf="@id/heading_text"
            android:layout_marginStart="65dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/heading_layout"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>